:bug: Fix jumping bookmark input

--- a/src/components/bookmark/bookmark.css
+++ b/src/components/bookmark/bookmark.css
@@ -120,6 +120,7 @@
 .show {
   display: block;
   width: 110%;
+  padding-bottom: 5px;
 }
 
 .rowSelected {
